Fix canvas dragging & z-index

--- a/app/assets/stylesheets/landing.scss
+++ b/app/assets/stylesheets/landing.scss
@@ -15,12 +15,14 @@
 }
 
 #signin-box {
+    z-index: 2;
     padding: 70px 40px;
     background: linear-gradient(7deg,
             rgba(255, 255, 255, 0.85) 0%, white 70%);
 }
 
 #announcement-box {
+    z-index: 1;
     display: flex;
     align-items: baseline;
     flex-wrap: wrap;
@@ -49,6 +51,10 @@
     @include media-breakpoint-down(sm) {
         border-radius: 0;
     }
+}
+
+footer {
+    z-index: 1;
 }
 
 #footer-bar {
@@ -99,4 +105,6 @@
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 0;
+    cursor: grab;
 }
